# standard_template.rs

./: .cspell.json  .editorconfig  .gitignore  .gitmessage  .lsp.json  .markdownlint.json  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CODEBUDDY.md  CONSTITUTION.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  clippy.toml  deny.toml  flake.nix  package.json  rustfmt.toml  shell.nix  starship.toml
.agents/ssot/: AGENTS.md  SSOT.md
.cargo/: README.md  config.toml  mutants.toml
.claude/: settings.json
.claude/hooks/: count-guard.mjs  count-guard.test.mjs  edit-guard-reset.mjs  edit-guard-reset.test.mjs  edit-guard.mjs  edit-guard.test.mjs  encoding-batch-check.mjs  encoding-batch-check.test.mjs  encoding-check.mjs  encoding-check.test.mjs  pre-tool-check.mjs  pre-tool-check.test.mjs  session-context.mjs  session-context.test.mjs  session-review.mjs  session-review.test.mjs
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci-monitor.mjs  ci-rust-org.yml  ci-rust.yml  constitution.yml  coverage.yml  pr-template-check.yml  public-api.yml  quality.yml  security.yml  self-test.yml  validation.yml
docs/: CI.md  ENCODING-COMPLETION-REPORT.md  README.md
docs/archive/: README.md
docs/constitution/: 01-mission.md  02-values.md  03-architecture.md  04-code-standards.md  05-quality-gates.md  06-governance.md  07-ai-agents.md  08-amendments.md  README.md
scripts/: fix-encoding.mjs  fix-encoding.test.mjs  self-test.mjs  self-test.test.mjs
(+45 files in other folders)
