[package]
name = "standard_template"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "A template for Rust stdio-based programs"
license = "MIT OR Apache-2.0"
repository = "https://github.com/xhyperium/standard_template.rs"
authors = ["xhyperium"]

[workspace]
members = ["."]

[workspace.dependencies]

[workspace.lints.rust]
unused_must_use = "warn"

[dependencies]
